# rust-github-teams-cli-tool

./: .editorconfig  .env.example  .gitignore  .rustfmt.toml  Cargo.toml  README.md  clippy.toml
.claude/: rule.md  settings.local.json
src/: cli.rs  config.rs  main.rs
src/display/: format.rs  mod.rs
src/stats/: contributor.rs  files.rs  mod.rs  time.rs
