[package]
name = "git-team-stats"
version = "0.1.0"
edition = "2021"
authors = ["Your Team"]
description = "Team Git statistics and analysis tool"
license = "MIT"
repository = "https://github.com/yourusername/git-team-stats"
keywords = ["git", "statistics", "team", "analysis", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
git2 = "0.19"
colored = "2.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "7.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
# Pedantic lints
pedantic = "warn"
# Nursery lints (unstable but useful)
nursery = "warn"
# Deny some specific lints
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
